# greeneatgo

./: .gitignore  DECISIONS.md  DEPLOYMENT.md  EMPLOYEE_BULK_UPLOAD_MODAL_SPEC.md  GREENEATGO_AGENT_SPEC.md  MASTER_INDEX.md  MEALLEDGER_AGENT_SPEC.md  PUSH_NOTIFICATION_SPEC.md  QR_PAYMENT_UNIFIED_SPEC.md  README.md  SETUP_SUPABASE_WEB.md  VOUCHER_PRODUCT_SPEC.md
services/api/: .env.example  pyproject.toml  render.yaml  start.sh
services/api/app/: auth.py  config.py  main.py  schemas.py
services/api/app/repositories/: README.md  join_repository.py  supabase_http.py
services/api/app/routers/: admin.py  auth_pages.py  boards.py  consumer.py  health.py  invites.py  join.py  me.py  merchant_admin.py  pay.py  payments.py  platform.py  products.py  push_notifications.py  toss_payments.py  transactions.py  voucher_products.py
services/api/app/services/: company_invites.py  employee_bulk.py  firebase_auth.py  geo.py  (+9 more)
services/api/scripts/: migrate_supabase_users_to_firebase.py
services/api/tests/: test_auth_fk_decoupling_migration.py  test_boards.py  test_company_invites.py  test_consumer_register.py  test_daily_menu.py  test_dual_auth.py  test_employee_admin_schemas.py  test_employee_bulk.py  test_geo.py  test_join_flow.py  test_kiwoom_payment.py  test_me_profile.py  test_merchant_company_contract.py  test_merchant_profile.py  test_policy_engine.py  test_product_images.py  test_product_subsidized_migration.py  test_push_notifications.py  test_refunds.py  test_subsidized_ledger.py  test_supabase_firebase_user_migration.py  test_toss_payment.py  test_vouchers.py
(+75 files in other folders)
